@@ -24,9 +24,7 @@ R_OBJS = \
   bprnt.o \
   lm.o \
   mpi_blacs.o \
-  par_selection.o \
   scalapack_utility_cpp.o \
-  selection.o \
   base_mpi_blac.o \
   base_pblas_level3.o \
   base_scalapack.o \
@@ -35,7 +33,6 @@ R_OBJS = \
   variance.o \
   base_variance.o \
   aux.o \
-  kmeans.o \
   bprnt_c.o
 OBJECTS = $(R_OBJS)
 
